objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_delivery_date__c</fullName>
        <label>Planned_delivery_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>opened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>delivered__c</fullName>
        <label>delivered</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>